# GraphAIne

./: .gitignore  README.md  __init__.py  install.sh  pyproject.toml  requirements.txt  setup.py
checkpoints/ffn/: checkpoint  ckpt-18.index  ckpt-19.index  ckpt-20.index
notebooks/: FNN_training.ipynb
src/inference/: fnn_predict.py
src/models/: .fnn.py.swp  fnn.py
src/modules/: data_loader.py  training_utils.py
src/various/: __init__.py  postprocess.py
