[build-system]
requires = ["setuptools>=64", "wheel"]  # Specify build dependencies
build-backend = "setuptools.build_meta"

[project]
name = "GraphAIne"
version = "0.1"
description = "A deep learning framework for graphene simulations"
authors = [
    {name = "Pablo Grobas Illobre", email = "pgrobasillobre@gmail.com"}
]
readme = "README.md"  # Path to your README file
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "tensorflow",
    "pandas",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["src"]  # Look for Python packages under the "src/" directory

